[tool.poetry]
name = "hexlet-code"
version = "0.0.0"
description = "First hexlet project"
authors = ["Igor Aukhadeev"]
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
